TableDisplay Added To KACharts
Added support for TableDisplay in KACharts

In the WIPCharts.py incorporated tabular display

--- a/KAAssMap/Untitled.ipynb
+++ b/KAAssMap/Untitled.ipynb
@@ -2,70 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import KAUtils as KAU\n",
-    "   \n",
-    "\n",
-    "def printWinners(df):\n",
-    "    bjpdf = df.loc[(df['PARTY']=='BJP') & (df['POSITION'] == 1)]\n",
-    "    print(\"BJP: \",len(bjpdf.index))\n",
-    "    incdf = df.loc[(df['PARTY']=='INC') & (df['POSITION'] == 1)]\n",
-    "    print(\"INC: \",len(incdf.index))\n",
-    "    jdsdf = df.loc[(df['PARTY']=='JD(S)') & (df['POSITION'] == 1)]\n",
-    "    print(\"JDS: \",len(jdsdf.index))\n",
-    "    inddf = df.loc[(df['PARTY']=='IND') & (df['POSITION'] == 1)]\n",
-    "    print(\"IND: \",len(inddf.index))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "fdf = KAU.getKAResults()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ydf = KAU.getKAResultsByYear(2013)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "ydf = KAU.changeElectionYear(ydf,2013,2018)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "ydf = KAU.kjp2bjp(ydf,100)"
+    "from bokeh.models import ColumnDataSource\n",
+    "from bokeh.models.widgets import DataTable, DateFormatter, TableColumn\n",
+    "from bokeh.plotting import output_notebook, show, output_file\n",
+    "\n",
+    "def getPartyTblStuff(df):\n",
+    "    \n",
+    "    pdf = df.copy()\n",
+    "    pdf = pdf.loc[pdf['SEATS_WON'] > 0]\n",
+    "    pdf = pdf.sort_values(by=['SEATS_WON','PARTY'],ascending=[False,True])\n",
+    "    \n",
+    "    data = dict (\n",
+    "        labels=pdf['PARTY'].tolist(),\n",
+    "        values1=pdf['SEATS_WON'],\n",
+    "        values2=pdf['PCT_VOTES_WON']\n",
+    "    )\n",
+    "  \n",
+    "    source = ColumnDataSource(data)\n",
+    "\n",
+    "    columns = [\n",
+    "        TableColumn(field=\"labels\", title=\"Party\"),\n",
+    "        TableColumn(field=\"values1\", title=\"Seats Won\"),\n",
+    "        TableColumn(field=\"values2\", title=\"% Vote Share\"),\n",
+    "    ]\n",
+    "    \n",
+    "    tblStuff = {\"source\":source, \"columns\":columns}\n",
+    "    \n",
+    "     \n",
+    "    return tblStuff\n",
+    "\n",
+    "def TableDisplay(tblStuff):\n",
+    "    source = tblStuff['source']\n",
+    "    columns = tblStuff['columns']\n",
+    "    data_table = DataTable(source=source, columns=columns, width=400, height=200)\n",
+    "    return data_table, source\n",
+    "\n"
    ]
   },
   {
@@ -76,210 +53,53 @@
    },
    "outputs": [],
    "source": [
-    "ydf = KAU.bsrcp2bjp(ydf,100)"
+    "import KAUtils as KAU\n",
+    "res = KAU.getKAPartyResultsByYear(2013)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "ydf1 = ydf.loc[ydf['VOTES'] > 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "ydf = ydf1"
+    "tblStuff = getPartyTblStuff(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "fdf1 = fdf.loc[fdf['YEAR'] <= 2013]"
+    "tblPlot, tblSource = TableDisplay(tblStuff)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "mdf = pd.concat([fdf1,ydf1])"
+    "output_file(\"dummy.html\")\n",
+    "show(tblPlot)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ST_NAME</th>\n",
-       "      <th>YEAR</th>\n",
-       "      <th>AC_NO</th>\n",
-       "      <th>POSITION</th>\n",
-       "      <th>AC_NAME</th>\n",
-       "      <th>AC_TYPE</th>\n",
-       "      <th>NAME</th>\n",
-       "      <th>SEX</th>\n",
-       "      <th>AGE</th>\n",
-       "      <th>CATEGORY</th>\n",
-       "      <th>PARTY</th>\n",
-       "      <th>VOTES</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>19891</th>\n",
-       "      <td>Karnataka</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>224</td>\n",
-       "      <td>4</td>\n",
-       "      <td>GUNDLUPET</td>\n",
-       "      <td>GEN</td>\n",
-       "      <td>B.P. MUDDUMALLU</td>\n",
-       "      <td>M</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>GEN</td>\n",
-       "      <td>JD(S)</td>\n",
-       "      <td>4017.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19892</th>\n",
-       "      <td>Karnataka</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>224</td>\n",
-       "      <td>5</td>\n",
-       "      <td>GUNDLUPET</td>\n",
-       "      <td>GEN</td>\n",
-       "      <td>G.M. GADKAR</td>\n",
-       "      <td>M</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>GEN</td>\n",
-       "      <td>SAJP</td>\n",
-       "      <td>3123.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19893</th>\n",
-       "      <td>Karnataka</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>224</td>\n",
-       "      <td>6</td>\n",
-       "      <td>GUNDLUPET</td>\n",
-       "      <td>GEN</td>\n",
-       "      <td>SUBHASH</td>\n",
-       "      <td>M</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>3041.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19895</th>\n",
-       "      <td>Karnataka</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>224</td>\n",
-       "      <td>7</td>\n",
-       "      <td>GUNDLUPET</td>\n",
-       "      <td>GEN</td>\n",
-       "      <td>P. SANGHASENA</td>\n",
-       "      <td>M</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>RPI(A)</td>\n",
-       "      <td>1588.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19896</th>\n",
-       "      <td>Karnataka</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>224</td>\n",
-       "      <td>8</td>\n",
-       "      <td>GUNDLUPET</td>\n",
-       "      <td>GEN</td>\n",
-       "      <td>MARIDASAIAH</td>\n",
-       "      <td>M</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>1546.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         ST_NAME  YEAR  AC_NO  POSITION    AC_NAME AC_TYPE             NAME  \\\n",
-       "19891  Karnataka  2018    224         4  GUNDLUPET     GEN  B.P. MUDDUMALLU   \n",
-       "19892  Karnataka  2018    224         5  GUNDLUPET     GEN      G.M. GADKAR   \n",
-       "19893  Karnataka  2018    224         6  GUNDLUPET     GEN          SUBHASH   \n",
-       "19895  Karnataka  2018    224         7  GUNDLUPET     GEN    P. SANGHASENA   \n",
-       "19896  Karnataka  2018    224         8  GUNDLUPET     GEN      MARIDASAIAH   \n",
-       "\n",
-       "      SEX   AGE CATEGORY   PARTY   VOTES  \n",
-       "19891   M  52.0      GEN   JD(S)  4017.0  \n",
-       "19892   M  53.0      GEN    SAJP  3123.0  \n",
-       "19893   M  38.0       SC     IND  3041.0  \n",
-       "19895   M  50.0       SC  RPI(A)  1588.0  \n",
-       "19896   M  58.0       SC     IND  1546.0  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mdf.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    "mdf.to_csv(\"./Data/KA_Projected_Base_Results.csv\")"
+    "tbldata = tblStuff['source'].data"
    ]
   },
   {
